--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -78,7 +78,13 @@ header {
 
 /* Main Body */
 .main {
-
+ display: grid;
+ grid-template-columns: repeat(8, 1fr);
+ grid-template-rows: repeat(5, 1fr);
+ grid-gap: 20px;
+ grid-auto-flow: row;
+ margin: 20px 50px 50px 0;
+ 
 }
 
 .body-title {
@@ -87,23 +93,98 @@ header {
 }
 
 .body-box {
- 
+  text-align: end;
+  border-right: 3px solid var(--secondary-color);
+  padding: 5px 10px 10px 10px;
+  font-family: "Courier New", Courier, monospace;
+  color: var(--primary-font-color);
+  text-shadow: -1px 0px 3px var(--shadow-border-color), -1px 0px 3px var(--shadow-border-color);
+  font-size: 1.5rem;
 }
 
 
 /* About Me */
 
-.about-me {
- 
+.about-me-title {
+ grid-column-start: 2;
+
+}
+
+.about-me-p {
+  grid-column: 3/ span 8;
+  border: 3px solid rgba(0, 0, 0, 0.2);
 }
 
 /* Work */
 
-.work {
+.work-title {
+ grid-column: 2;
+ grid-row: 2 / span 3;
  
 }
 
+.run-buddy {
+  grid-column: 3 / span 4;
+  grid-row: 2/ span 2;
+  border: 3px solid rgba(0, 0, 0, 0.2);
+}
+
+.horiseon {
+  grid-column: 7 / span 4;
+  grid-row: 2;
+  border: 3px solid rgba(0, 0, 0, 0.2);
+}
+
+.proj3 {
+  grid-column: 7 / span 4;
+  grid-row: 3;
+  border: 3px solid rgba(0, 0, 0, 0.2);
+}
+
+.proj4 {
+  grid-column: 3 / span 2;
+  grid-row: 4;
+  border: 3px solid rgba(0, 0, 0, 0.2);
+}
+
+.proj5 {
+  grid-column: 5 / span 2;
+  grid-row: 4;
+  border: 3px solid rgba(0, 0, 0, 0.2);
+}
+
 /* Contact Me*/
-.contact-me {
-  
+.contact-title {
+  grid-column-start: 2;
+  grid-row: 5;
+ 
+}
+
+.phone {
+  grid-column-start: 3;
+  grid-row: 5;
+  border: 3px solid rgba(0, 0, 0, 0.2);
+}
+
+.email {
+  grid-column-start: 4;
+  grid-row: 5;
+  border: 3px solid rgba(0, 0, 0, 0.2);
+}
+
+.github {
+  grid-column-start: 5;
+  grid-row: 5;
+  border: 3px solid rgba(0, 0, 0, 0.2);
+}
+
+.twitter {
+  grid-column-start: 6;
+  grid-row: 5;
+  border: 3px solid rgba(0, 0, 0, 0.2);
+}
+.spotify {
+  grid-column-start: 7;
+  grid-row: 5;
+  border: 3px solid rgba(0, 0, 0, 0.2);
 }
