--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -102,11 +102,17 @@ header nav ul li a:hover {
   color: var(--primary-font-color);
   text-shadow: -1px 0px 3px var(--shadow-border-color),
     -1px 0px 3px var(--shadow-border-color);
-  font-size: 1.60rem;
+  font-size: 1.6rem;
   display: flex;
   align-items: flex-end;
   margin: 15px;
+  
 
+}
+
+span {
+  background-color: rgba(64, 94, 105, 0.70);
+  padding: 5px;
 }
 
 /* Main Body */
@@ -165,8 +171,18 @@ header nav ul li a:hover {
 
 .work-grid {
   border: 3px solid var(--shadow-border-color);
-  display:flex;
+  display: flex;
   align-items: flex-end;
+
+}
+
+.work-grid a {
+  font-size: 1.5rem;
+  font-weight: bold;
+  font-family: "Courier New", Courier, monospace;
+  color: var(--primary-font-color);
+  text-shadow: -1px 0px 3px var(--shadow-border-color),
+    -1px 0px 3px var(--shadow-border-color);
 }
 
 .title-link {
@@ -217,8 +233,6 @@ header nav ul li a:hover {
   grid-auto-flow: dense;
   grid-gap: 30px;
 }
-
-
 
 .contact-grid a {
   text-decoration: none;
