coding bootcamp survival guide project added

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -221,7 +221,7 @@ header nav ul li a:hover {
 }
 
 .proj4 {
-  background: url(../images/proj4.jpg);
+  background: url(../images/proj4.PNG);
   background-size: cover;
 }
 
